[gd_scene load_steps=2 format=3 uid="uid://badce2qtetrcx"]

[ext_resource type="Script" uid="uid://djsavv52a3u7a" path="res://scenes/ui/ExplorationHUD.gd" id="1_6k4m3"]

[node name="ExplorationHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6k4m3")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 40.0
grow_horizontal = 0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Vida: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
text = "NÃ­vel: 1"
horizontal_alignment = 2

[node name="ExperienceBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
max_value = 100.0
value = 0.0
show_percentage = false

[node name="ExperienceLabel" type="Label" parent="ExperienceBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "EXP: 0/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 110.0
offset_right = -20.0
offset_bottom = 130.0
grow_horizontal = 0
text = "Ouro: 0"
horizontal_alignment = 2

[node name="InteractionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
text = "Pressione E para interagir"
horizontal_alignment = 1
vertical_alignment = 1
